--- a/assets/css/3.elemets.css
+++ b/assets/css/3.elemets.css
@@ -1,7 +1,10 @@
 body {
   background: var(--brown-1);
   color: var(--brown-2);
-  overflow-x: hidden;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 h1 {
