--- a/assets/css/4.objects.css
+++ b/assets/css/4.objects.css
@@ -1,3 +1,8 @@
+.scroll {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .container {
   margin-bottom: var(--space-xl);
   padding-left: var(--space-s);
