--- a/assets/css/4.objects.css
+++ b/assets/css/4.objects.css
@@ -1,12 +1,12 @@
 .scroll {
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: scroll;
 }
 
 .container {
   margin-bottom: var(--space-xl);
   padding-left: var(--space-s);
   padding-right: var(--space-s);
+  overflow: hidden;
 }
 
 .box {
