--- a/assets/css/5.components.css
+++ b/assets/css/5.components.css
@@ -123,3 +123,49 @@
   height: 9rem;
   width: 15rem;
 }
+
+@media only screen and (min-device-width: 1024px) {
+  .activities {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: var(--space-3xl);
+    position: relative;
+  }
+
+  .activities::before {
+    content: "";
+    display: block;
+    background-color: rgba(var(--beige-r), var(--beige-g), var(--beige-b), 0.2);
+    height: 18rem;
+    width: 80%;
+    border-bottom-right-radius: 2em;
+    border-top-right-radius: 2em;
+    position: absolute;
+    left: 0;
+    top: 6rem;
+  }
+
+  .activities::after {
+    content: "";
+    display: block;
+    background-image: radial-gradient(var(--beige) 30%, transparent 20%);
+    background-position: 0 0;
+    background-size: 3rem 3rem;
+    height: 12rem;
+    width: 21rem;
+    position: absolute;
+    right: 0;
+    bottom: 2rem;
+  }
+
+  .activities__title {
+    text-align: center;
+  }
+
+  .activity {
+    flex: 1;
+    max-width: 33%;
+  }
+}
