feat: nice desktop footer and better media quieries

--- a/assets/css/4.objects.css
+++ b/assets/css/4.objects.css
@@ -67,7 +67,7 @@
   font-size: var(--step--1);
 }
 
-@media only screen and (min-device-width: 768px) {
+@media only screen and (min-width: 768px) {
   .container {
     overflow: visible;
   }
@@ -100,7 +100,7 @@
   }
 }
 
-@media only screen and (min-device-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   .grid {
     max-width: 90%;
     float: right;
